--- a/src/Components/Nav/styles.css
+++ b/src/Components/Nav/styles.css
@@ -1,4 +1,4 @@
-.container {
+.nav-container {
   display: flex;
   height: 80px;
   align-items: center;
@@ -16,13 +16,13 @@ ul > li > a:hover {
 }
 
 @media screen and (min-width: 850px) {
-  .container {
+  .nav-container {
     margin: auto;
     justify-content: center;
     width: 100%;
   }
 
-  .container > ul {
+  .nav-container > ul {
     display: flex;
     align-items: center;
     gap: 12px;
@@ -42,7 +42,7 @@ ul > li > a:hover {
 }
 
 @media screen and (max-width: 849px) {
-  .container {
+  .nav-container {
     justify-content: space-between;
     padding: 0 16px 0 16px;
   }
@@ -51,7 +51,7 @@ ul > li > a:hover {
     cursor: pointer;
   }
 
-  .container > ul {
+  .nav-container > ul {
     display: none;
   }
 
