--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -4,15 +4,18 @@
   align-items: center;
   justify-content: center;
   gap: 120px;
-  padding: 40px;
+  padding: 40px 0;
 }
 
 .title {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   color: #edefee;
   gap: 8px;
   height: 30vh;
+  max-width: 800px;
+  width: 100%;
 }
 
 .title > h1 {
@@ -49,6 +52,7 @@
   border-radius: 8px;
   padding: 12px 32px 12px 32px;
   font-weight: 800;
+  font-size: 1rem;
   transition: color 0.3s ease-in;
   transition: background-color 0.3s ease-in;
 }
@@ -62,12 +66,9 @@
 
 @media screen and (min-width: 850px) {
   .header-container {
-    margin-bottom: 15vh;
+    margin-bottom: 10vh;
   }
 
-  .title {
-    margin-right: 400px;
-  }
   .header-image {
     margin-left: 416px;
     margin-top: 120px;
@@ -85,10 +86,13 @@
 
   .header-image {
     position: absolute;
-    top: 45vh;
+    top: 48vh;
   }
 
   .title {
     display: flex;
+    margin: 0;
+    padding: auto;
+    max-width: 400px;
   }
 }
