--- a/src/Components/Home/Main/styles.css
+++ b/src/Components/Home/Main/styles.css
@@ -32,6 +32,13 @@
   font-size: 1rem;
 }
 
+.food-header > button:hover {
+  background-color: #333333;
+  color: #f4ce14;
+  transition: color 0.3s ease-in;
+  transition: background-color 0.3s ease-in;
+}
+
 .food-card-container {
   display: flex;
   flex-direction: row;
@@ -52,4 +59,35 @@
   .food-header > h1 {
     font-size: 3.5rem;
   }
+}
+
+.testimonials-container {
+  display: flex;
+  background-color: #495e57;
+  min-height: 40vh;
+  padding: 10vh;
+  margin-top: 25vh;
+  color: #fff;
+  justify-content: center;
+}
+
+.testimonials {
+  max-width: 800px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.testimonials-card-container {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.testimonials > h2 {
+  font-family: "Markazi Text", "Roboto", sans-serif;
+  font-size: 3.5rem;
+  font-weight: 500;
+  margin-top: 0;
 }
