--- a/src/Components/Home/Main/styles.css
+++ b/src/Components/Home/Main/styles.css
@@ -85,9 +85,47 @@
   width: 100%;
 }
 
+@media screen and (max-width: 849px) {
+  .testimonials-card-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    gap: 40px;
+  }
+}
+
 .testimonials > h2 {
   font-family: "Markazi Text", "Roboto", sans-serif;
   font-size: 3.5rem;
   font-weight: 500;
   margin-top: 0;
+}
+
+.owners {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  height: 40vh;
+}
+
+.owners-container {
+  max-width: 800px;
+  display: flex;
+  align-items: start;
+}
+
+.owners-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: justify;
+}
+
+.owners-image {
+  min-width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
